--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=ErSunZEMa7bCStiCdTVXmRLDXCt9dtK0"></script>
   <meta name="format-detection" content="telephone=no"/>
   <!--<meta name="flexible" content="initial-dpr=1">-->
-  <title>安田惠通</title>
+  <title>顺德缴费</title>
 </head>
 <body style="width: 100%;height: 100%;position: absolute;top: 0;">
 <div id="app"></div>
